src/objects/ExternalServiceRegistry__mdt.object
<CustomObject>
    <description>Entries represent control parameters for External Services.  Referenced by the ServiceName__c field of ExternalService__c records, and used within ExternalServiceDispatcher.cls</description>
    <fields>
        <fullName>AuthorizationHeaderToken__c</fullName>
        <description>Authorization token to set in request header.</description>
        <inlineHelpText>Authorization token to set in request header.</inlineHelpText>
        <label>Authorization Header Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizationHeaderValue__c</fullName>
        <description>Authorization value to set in request header.</description>
        <inlineHelpText>Authorization value to set in request header.</inlineHelpText>
        <label>Authorization Header Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalServiceClass__c</fullName>
        <description>External Service Class - Instantiated dynamically at runtime</description>
        <inlineHelpText>External Service Class</inlineHelpText>
        <label>External Service Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalServiceDescription__c</fullName>
        <description>External Service Description</description>
        <inlineHelpText>External Service Description</inlineHelpText>
        <label>External Service Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalServiceDispatcherClass__c</fullName>
        <description>The Apex class invoked to dispatch this External Service requests.</description>
        <inlineHelpText>The Apex class invoked to dispatch this External Service requests.</inlineHelpText>
        <label>External Service Dispatcher Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Active</description>
        <inlineHelpText>Is Active</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NamedCredential__c</fullName>
        <description>The Named Credential connection parameters to use for this External Service.</description>
        <inlineHelpText>The Named Credential connection parameters to use for this External Service.</inlineHelpText>
        <label>Named Credential</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>ExternalServiceRegistry</label>
    <listViews>
        <fullName>All_Settings</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>ExternalServiceClass__c</columns>
        <columns>ExternalServiceDispatcherClass__c</columns>
        <columns>NamedCredential__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Settings</label>
    </listViews>
    <pluralLabel>ExternalServiceRegistries</pluralLabel>
</CustomObject>